<resources>
    <string name="app_name">Teacher App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="app_networkError">Please connect to internet connection.</string>
    <string name="error_message">Error Message</string>
    <string name="success_message">Success</string>
    <string name="error_tryagain">Please try again.</string>
    <string name="from">From</string>
    <string name="to">To</string>


    <string name="upload_image">Take Picture</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>

    <string name="error_un">Please enter user name.</string>
    <string name="error_ps">Please enter password.</string>
    <string name="error_email">Please enter email id.</string>
    <string name="load_singin">Configure Signin...</string>

    <string name="error_s_name">Please enter student name.</string>

    <string name="error_otp">Please enter otp.</string>
    <string name="error_mn">Please enter mobile number.</string>
    <string name="error_cnfpass">Please enter confirm password.</string>
    <string name="error_correctpass">Please enter both password should be same.</string>
    <string name="error_psnew">Please enter new password.</string>
    <string name="error_psold">Please enter old password.</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="error_sentto">Please enter send to.</string>
    <string name="error_subject">Please enter subject.</string>
    <string name="error_mesage">Please enter message.</string>
    <string name="error_radio">Please select one or multiple day leave.</string>
    <string name="error_fromdate">Please select Fromdate.</string>
    <string name="error_todate">Please select Todate.</string>

    <string name="error_address1">Please enter address1.</string>
    <string name="error_address2">Please enter address2.</string>


    <string name="slide_1_title">Paco Catholic School</string>
    <string name="slide_1_desc">The easiest way to manage school management after install app feature!</string>

    <string name="slide_2_title">Schools</string>
    <string name="slide_2_desc">Schools family and friends , Paco Catholic School is a religious educational institution with office!</string>

    <string name="slide_3_title">Great Environment </string>
    <string name="slide_3_desc">Best Environment for the students</string>

    <string name="slide_4_title">Better Transportation</string>
    <string name="slide_4_desc">Better transportation services in the world lavel!</string>

    <string name="play_again_desc">To see the school slider again, goto Settings -> apps -> school slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="name">Teacher Full Name</string>
    <string name="email">Email ID </string>
    <string name="password">Password </string>
    <string name="passwordold">Old Password </string>
    <string name="passwordnew">New Password </string>
    <string name="confrmpassword">Confirm Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="title_activity_activity_news_datas">News Detail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
