<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pass_chg" />

                <TextView
                    android:id="@+id/textview_changepassword"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:text="Change Password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    android:textStyle="bold|italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/st_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:enabled="false"
                        android:maxLength="40"
                        android:padding="12dip"
                        android:textAppearance="?android:textAppearanceSmall" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/stemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLength="30"
                        android:padding="12dip"
                        android:textAppearance="?android:textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/f_mobilenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:hint="@string/mobile"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="10"
                        android:padding="12dip"
                        android:textAppearance="?android:textAppearanceSmall" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/staddress_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/address1"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLength="300"
                        android:padding="12dip"
                        android:textAppearance="?android:textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/staddress_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/address2"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLength="300"
                        android:padding="12dip"
                        android:textAppearance="?android:textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textview_gender"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="Gender : Male"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/btnskip"
            android:layout_width="0dip"
            android:layout_height="match_parent"

            android:layout_centerHorizontal="true"
            android:layout_margin="3sp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="Skip"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btneditprofile"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="3sp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="Update Profile"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>

